--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "NOTE MAKING",
+  "name": "NOTE MAKING REACT APP",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "notes1.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/svg"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "notes1.svg",
+      "type": "image/svg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "notes1.svg",
+      "type": "image/svg",
       "sizes": "512x512"
     }
   ],
